# track-compute-jobs

./: .gitignore  README.md  pyproject.toml
docs/trackjobs/: index.html  main.html
docs/trackjobs/lib/: actions.html  aux.html  cli.html  default.html  index.html  io.html
examples/: hosts.json
trackjobs/: __init__.py  main.py
trackjobs/lib/: __init__.py  actions.py  aux.py  cli.py  cli_flags.py  default.py  io.py
trackjobs/remote/: actions_remote.py  cli_remote.py
